feat: cache redis 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
   redis:
-    host: localhost  # Redis ?? ??
-    port: 6379        # Redis ?? ??
+    host: localhost
+    port: 6379
+
+  cache:
+    type: redis
